feat: chainging CRA for vite

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Crowdfounding website"
+      name="Crwodfy"
       content="FrontEnd website of crowdfy Dapp"
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+      <link rel="manifest" href="./manifest.json" />
     <link rel="stylesheet" href="./app.css">
-
     <title>Crowdfy</title>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
